# eater

./: .gitmodules  README.md
comp6502/convert_to_dec/: .convert_to_dec2.s.swp  a.out  a.out2  convert_to_dec-4bit.s  convert_to_dec2.s
comp6502/hello_world/: .hello_world4bit-5.s.swp  a.out  hello_world4bit-2.s  hello_world4bit-3.s  hello_world4bit-5.s  hello_world4bit-working1.s  hello_world4bit.s
comp6502/interrupt/: .interrupt-4bit.s.swp  a.out  interrupt1.s
comp6502/keyboard_interface/: .keyboard_interface_4bit_LCD.s.swp  a.out  interrupt-4bit.s  keyboard_interface_4bit_LCD-old.s  keyboard_interface_4bit_LCD_numbers_only_finished.s  keyboard_interface_4bit_LCDv2-full-working.s  keyboard_interface_4bit_LCDv2-working.s  keyboard_interface_with_shift-working.s
comp6502/vga/: convert.py  convert2.py  test1.py
network/pio_transmit/: CMakeLists.txt
network/receive/: recive.code-workspace
network/recive/: CMakeLists.txt  recive.c
network/transmit/: CMakeLists.txt  transmit.c
